k8s/deployment-nginx.yaml
# test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-nginx1
spec:
  schedulerName: proxima-scheduler
  containers:
  - name: nginx-container
    image: nginx
